<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.conra.myapplication.FormResultActivity">

    <TextView
        android:id="@+id/result_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/firstname" />

    <TextView
        android:id="@+id/result_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/lastname" />

    <TextView
        android:id="@+id/result_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/login" />

    <TextView
        android:id="@+id/result_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/password" />
</LinearLayout>
