<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.conra.myapplication.MainActivity">

    <TextView
        android:labelFor="@+id/input_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname" />

    <EditText
        android:id="@+id/input_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textPersonName" />

    <TextView
        android:labelFor="@+id/input_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname" />

    <EditText
        android:id="@+id/input_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textPersonName" />

    <TextView
        android:labelFor="@+id/input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:id="@+id/input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:labelFor="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <Button
        android:id="@+id/goto_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_card" />

</LinearLayout>
